tests/type/errors/bad_return3.xi
foo(): bool {
    return 1
}